--- a/404.md
+++ b/404.md
@@ -1,5 +1,10 @@
 
-
+<style>
+  .markdown-body>*:first-child {
+    margin-top: 0 !important;
+    display: none;
+}
+  </style>
 Error 404 ! Page not available 
 
 Open Homepage ==> https://aksinghrajpoot.xnetking.in
