--- a/404.md
+++ b/404.md
@@ -1,10 +1,4 @@
-
-<style>
-  .markdown-body>*:first-child {
-    margin-top: 0 !important;
-    display: none;
-}
-  </style>
+<style>.markdown-body>*:first-child{margin-top: 0 !important;display: none;}</style>
 Error 404 ! Page not available 
 
-Open Homepage ==> https://aksinghrajpoot.xnetking.in
+Open Homepage ==> <a href='https://aksinghrajpoot.xnetking.in' alt='A K Singh Rajpoot'> https://aksinghrajpoot.xnetking.in </a>
